
  BUG FIXES:

    * ``bzr unshelve`` gives a more palatable error if passed a non-integer
      shelf id. (Daniel Watkins)

    * ``bzr missing`` now uses ``Repository.get_revision_delta()`` rather
      than fetching trees and determining a delta itself. (Jelmer
      Vernooij, #315048)

    * Export now handles files that are not present in the tree.
      (James Westby, #174539)

    * Many Branch hooks would not fire with ``bzr://`` and ``bzr+ssh://``
      branches, and this was not noticed due to a bug in the test logic
      for branches. This is now fixed and a test added to prevent it
      reoccuring. (Robert Collins, Andrew Bennetts)

  DOCUMENTATION:

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

    * ``bzr selftest`` now fails if the bazaar sources contain trailing
      whitespace, non-unix style line endings and files not ending in a
      newline. About 372 files and 3243 lines with trailing whitespace was
      updated to comply with this. The code already complied with the other
      criteria, but now it is enforced. (Marius Kruger)

  INTERNALS:

    * Branch and Repository creation on a bzr+ssh://server are now done
      via RPC calls rather than VFS calls, reducing round trips for
      pushing new branches substantially. (Robert Collins)

    * ``Branch.clone`` now takes the ``repository_policy`` formerly used
      inside ``BzrDir.clone_on_transport``, allowing stacking to be
      configured before the branch tags and revision tip are set. This
      fixes a race condition cloning stacked branches that would cause
      plugins to have hooks called on non-stacked instances.
      (Robert Collins, #334187)

    * ``BzrDirFormat.__str__`` now uses the human readable description
      rather than the sometimes-absent disk label. (Robert Collins)

    * ``bzrlib.fetch`` is now composed of a sender and a sink component